--- a/vue_api/public/index.html
+++ b/vue_api/public/index.html
@@ -1,17 +1,33 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>vue_api</title>
+    <meta charset="utf-8" />
+    <title>VueJS Tutorials</title>
+    <link href="styles.css" rel="stylesheet" />
+    <script src="https://unpkg.com/vue"></script>
   </head>
+
   <body>
-    <noscript>
-      <strong>We're sorry but vue_api doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
+    <div id="vue-app">
+      <h1>Events</h1>
+      <button @click="add(1)">Add a Year</button>
+      <button v-on:click="subtract(1)">Subtract a Year</button>
+      <button @dblclick="add(10)">Add 10 Years</button>
+      <button v-on:dblclick="subtract(10)">Subtract 10 Years</button>
+      <p>My age is {{ age }}</p>
+      <div id="canvas" v-on:mousemove="updateXY">{{ x }},{{ y }}</div>
+      <a v-on:click.prevent="click" href="https://www.google.com">The Google</a>
+      <hr />
+
+      <h1>Keyboard Events</h1>
+      <label>Name: </label>
+      <input type="text" v-model="name" />
+      <span>{{ name }}</span>
+      <label>Age:</label>
+      <input type="text" v-model="age" />
+      <span>{{ age }}</span>
+    </div>
   </body>
+
+  <script src="main.js"></script>
 </html>
