--- a/vue_api/public/index.html
+++ b/vue_api/public/index.html
@@ -1,33 +1,17 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>VueJS Tutorials</title>
-    <link href="styles.css" rel="stylesheet" />
-    <script src="https://unpkg.com/vue"></script>
+    <link
+      rel="shortcut icon"
+      type="image/png"
+      href="./assets/logos/favicon.png"
+    />
+    <title>cryptotable</title>
   </head>
 
   <body>
-    <div id="vue-app">
-      <h1>Events</h1>
-      <button @click="add(1)">Add a Year</button>
-      <button v-on:click="subtract(1)">Subtract a Year</button>
-      <button @dblclick="add(10)">Add 10 Years</button>
-      <button v-on:dblclick="subtract(10)">Subtract 10 Years</button>
-      <p>My age is {{ age }}</p>
-      <div id="canvas" v-on:mousemove="updateXY">{{ x }},{{ y }}</div>
-      <a v-on:click.prevent="click" href="https://www.google.com">The Google</a>
-      <hr />
-
-      <h1>Keyboard Events</h1>
-      <label>Name: </label>
-      <input type="text" v-model="name" />
-      <span>{{ name }}</span>
-      <label>Age:</label>
-      <input type="text" v-model="age" />
-      <span>{{ age }}</span>
-    </div>
+    <div id="app"></div>
+    <script src="/dist/build.js"></script>
   </body>
-
-  <script src="main.js"></script>
 </html>
